--- a/web/src/search/_SearchBox.scss
+++ b/web/src/search/_SearchBox.scss
@@ -58,6 +58,7 @@
         margin-left: 0.5rem;
         margin-right: 0.5rem;
         padding-bottom: 0.125rem;
+        overflow: hidden;
     }
 
     &__search-icon {
